--- a/seguros.html
+++ b/seguros.html
@@ -6,22 +6,29 @@
     <meta name="description" content="Termos e Condições" />
     <title>Seguros | Bikcraft</title>
 
-    <link rel="preload" href="./css/styles.css" as="style" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/styles.min.css" as="style" />
+    <link rel="stylesheet" href="./css/styles.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
 
-    <script>document.documentElement.classList.add('js');</script>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="seguros">
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+          <img
+            src="./img/bikcraft.svg"
+            width="136"
+            height="32"
+            alt="Bikcraft"
+          />
         </a>
 
         <nav aria-label="primaria">
@@ -56,7 +63,11 @@
             <li>Suporte 08h às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
+          <a
+            class="botao secundario"
+            href="./orcamento.html?tipo=seguro&produto=prata"
+            >Inscreva-se</a
+          >
         </div>
 
         <div class="seguros-item fadeInRight" data-anime="400">
@@ -72,7 +83,9 @@
             <li>Desconto em parceiros</li>
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
+          <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro"
+            >Inscreva-se</a
+          >
         </div>
       </div>
     </main>
@@ -140,7 +153,15 @@
 
       <dl>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta1"
+              aria-expanded="true"
+            >
+              Qual forma de pagamento vocês aceitam?
+            </button>
+          </dt>
           <dd id="pergunta1" class="font-2-s cor-9 ativa">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -148,7 +169,15 @@
           </dd>
         </div>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta2"
+              aria-expanded="false"
+            >
+              Como posso entrar em contato?
+            </button>
+          </dt>
           <dd id="pergunta2" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -156,7 +185,15 @@
           </dd>
         </div>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta3"
+              aria-expanded="false"
+            >
+              Vocês possuem algum desconto?
+            </button>
+          </dt>
           <dd id="pergunta3" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -164,7 +201,15 @@
           </dd>
         </div>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta4"
+              aria-expanded="false"
+            >
+              Qual a garantia que possuo?
+            </button>
+          </dt>
           <dd id="pergunta4" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -172,7 +217,15 @@
           </dd>
         </div>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta5"
+              aria-expanded="false"
+            >
+              Posso parcelar no boleto?
+            </button>
+          </dt>
           <dd id="pergunta5" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -180,7 +233,15 @@
           </dd>
         </div>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer ano ano?</button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta6"
+              aria-expanded="false"
+            >
+              Quantas trocas posso fazer ano ano?
+            </button>
+          </dt>
           <dd id="pergunta6" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -188,9 +249,15 @@
           </dd>
         </div>
         <div>
-          <dt><button class="font-1-m-b" aria-controls="pergunta7" aria-expanded="false">
-            Qual Bikcraft devo escolher para o meu tamanho?
-          </button></dt>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta7"
+              aria-expanded="false"
+            >
+              Qual Bikcraft devo escolher para o meu tamanho?
+            </button>
+          </dt>
           <dd id="pergunta7" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
             e American Express. Para pagamentos à vista também aceitamos PIX e
@@ -215,13 +282,28 @@
           </ul>
           <div class="footer-redes">
             <a href="./">
-              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
+              <img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
+              <img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
