--- a/bicicletas.html
+++ b/bicicletas.html
@@ -6,22 +6,29 @@
     <meta name="description" content="Termos e Condições" />
     <title>Bicicletas | Bikcraft</title>
 
-    <link rel="preload" href="./css/styles.css" as="style" />
-    <link rel="stylesheet" href="./css/styles.css" />
-
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/styles.min.css" as="style" />
+    <link rel="stylesheet" href="./css/styles.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
 
-    <script>document.documentElement.classList.add('js');</script>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="bicicletas">
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+          <img
+            src="./img/bikcraft.svg"
+            width="136"
+            height="32"
+            alt="Bikcraft"
+          />
         </a>
 
         <nav aria-label="primaria">
@@ -46,7 +53,12 @@
 
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta" />
+          <img
+            src="./img/bicicletas/nimbus.jpg"
+            width="1120"
+            height="680"
+            alt="Bicicleta preta"
+          />
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -81,7 +93,12 @@
       <div class="bicicletas-bg">
         <div class="bicicletas container">
           <div class="bicicletas-imagem">
-            <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/magic.jpg"
+              width="1120"
+              height="680"
+              alt="Bicicleta preta"
+            />
             <span class="font-2-m cor-0">R$ 2499</span>
           </div>
           <div class="bicicletas-conteudo">
@@ -116,7 +133,12 @@
 
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta" />
+          <img
+            src="./img/bicicletas/nebula.jpg"
+            width="1120"
+            height="680"
+            alt="Bicicleta preta"
+          />
           <span class="font-2-m cor-0">R$ 3999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -164,13 +186,28 @@
           </ul>
           <div class="footer-redes">
             <a href="./">
-              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
+              <img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
+              <img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
