--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -8,14 +8,18 @@
     <meta name="description" content="Termos e Condições" />
     <title>Nebula Cosmic | Bikcraft</title>
 
-    <link rel="stylesheet" href="../css/styles.css" />
-
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="../css/styles.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="bicicleta">
@@ -57,7 +61,11 @@
             velocidade.
           </p>
           <div class="bicicleta-comprar">
-            <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nebula">Comprar Agora</a>
+            <a
+              class="botao"
+              href="../orcamento.html?tipo=bikcraft&produto=nebula"
+              >Comprar Agora</a
+            >
             <span class="font-1-xs cor-6"
               ><img src="../img/icones/entrega.svg" alt="" /> entrega em
               5dias</span
@@ -118,14 +126,14 @@
       <ul>
         <li>
           <a href="./magic.html">
-            <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta">
+            <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Magic Might</h3>
             <span class="font-2-m cor-8">R$ 2499</span>
           </a>
         </li>
         <li>
           <a href="./nimbus.html">
-            <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+            <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Nimbus Stark</h3>
             <span class="font-2-m cor-8">R$ 4999</span>
           </a>
@@ -136,11 +144,20 @@
     <article class="seguro-bg">
       <div class="seguro container">
         <div class="seguro-imagem">
-          <img src="../img/fotos/seguros.jpg" alt="Pessoa parada em cima de bicicleta">
+          <img
+            src="../img/fotos/seguros.jpg"
+            alt="Pessoa parada em cima de bicicleta"
+          />
         </div>
         <div class="seguro-conteudo">
-          <h2 class="font-1-xxl cor-0">Pedale mais tranquilo com o nosso <span class="cor-p1">seguro.</span></h2>
-          <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+          <h2 class="font-1-xxl cor-0">
+            Pedale mais tranquilo com o nosso
+            <span class="cor-p1">seguro.</span>
+          </h2>
+          <p class="font-2-l cor-5">
+            Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite
+            diversos benefícios.
+          </p>
           <a class="botao" href="../seguros.html">Conheça Mais</a>
         </div>
       </div>
