--- a/contato.html
+++ b/contato.html
@@ -6,22 +6,29 @@
     <meta name="description" content="Termos e Condições" />
     <title>Contato | Bikcraft</title>
 
-    <link rel="preload" href="./css/styles.css" as="style" />
-    <link rel="stylesheet" href="./css/styles.css" />
-
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/styles.min.css" as="style" />
+    <link rel="stylesheet" href="./css/styles.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
 
-    <script>document.documentElement.classList.add('js');</script>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="contato">
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+          <img
+            src="./img/bikcraft.svg"
+            width="136"
+            height="32"
+            alt="Bikcraft"
+          />
         </a>
 
         <nav aria-label="primaria">
@@ -61,13 +68,28 @@
           </address>
           <div class="contato-redes">
             <a href="./">
-              <img src="./img/redes/instagram-p.svg" width="32" height="32" alt="Instagram" />
+              <img
+                src="./img/redes/instagram-p.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook-p.svg" width="32" height="32" alt="Facebook" />
+              <img
+                src="./img/redes/facebook-p.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube-p.svg" width="32" height="32" alt="Youtube" />
+              <img
+                src="./img/redes/youtube-p.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </section>
@@ -114,7 +136,9 @@
       <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
       <div class="lojas-item">
         <img
-          src="./img/lojas/rj.jpg" width="1120" height="520"
+          src="./img/lojas/rj.jpg"
+          width="1120"
+          height="520"
           alt="mapa marcando o enderço em rua Ali Perto, 25 - Rio de janeiro - RJ"
         />
         <div class="lojas-conteudo">
@@ -170,13 +194,28 @@
           </ul>
           <div class="footer-redes">
             <a href="./">
-              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
+              <img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
+              <img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
